# tickets-bot

./: .env.example  .gitignore  Dockerfile.ticketbot  README.md  docker-compose.yml  go.work
docs/: SETUP.md
frontend/: Dockerfile  (+3 more)
rust/: Cargo.toml
rust/.github/workflows/: build-and-publish.yaml
rust/bot-list-updater/: Dockerfile
rust/cache/: Dockerfile
rust/cache-sync-service/: Cargo.toml  Dockerfile
rust/cache-sync-service/src/: config.rs  main.rs
rust/cache-sync-service/src/processor/: manager.rs
rust/event-stream/: Cargo.toml
rust/event-stream/src/: consumer.rs  error.rs  publisher.rs
rust/http-gateway/: Cargo.toml  Dockerfile
rust/http-gateway/src/: main.rs
rust/image-proxy/: Dockerfile
rust/model/src/interaction/: checkbox_group.rs  component.rs  container.rs  file.rs  input_text.rs  interaction.rs  label.rs  media_gallery.rs  mod.rs  radio_group.rs  section.rs  select_menu.rs  separator.rs  text_display.rs  thumbnail.rs
rust/model/src/user/: activity.rs
rust/patreon-proxy/: Dockerfile
rust/patreon-proxy/src/patreon/: models.rs  poller.rs
rust/server-counter/: Dockerfile  envvars.md
rust/server-counter/src/http/routes/: total.rs
rust/sharder/: Cargo.toml  Dockerfile  Dockerfile.whitelabel  entrypoint.sh  main.Dockerfile  whitelabel.Dockerfile
rust/sharder/src/: config.rs
rust/sharder/src/gateway/: shard.rs
rust/sharder/src/gateway/event_forwarding/: mod.rs  redis_stream.rs
rust/sharder/src/gateway/payloads/event/: events.rs
rust/sharder/src/gateway/session_store/: redis_store.rs
rust/vote_listener/: Dockerfile
(+763 files in other folders)
